# twenty-seven

./: .env.dist  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  pyproject.toml
.docker/backend/: Dockerfile
.docker/frontend/: Dockerfile
.docker/lm_studio/: Dockerfile  entrypoint.sh
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
frontend/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AskAnotherQuestionButton.tsx  ExportFormatSelector.tsx  ExportPanel.tsx  Footer.tsx  ProviderSelector.tsx
frontend/components/ui/: button.tsx  card.tsx  input.tsx  loading.tsx
notebooks/: eda.ipynb
src/app/: main.py  models.py  utils.py
src/app/routers/: generator_router.py  models_router.py  perspectives_router.py  system_router.py
src/config/: settings.py
src/lm/: utils.py
src/twentyseven/: __init__.py
src/twentyseven/app/: main.py  utils.py
src/twentyseven/app/routers/: generator_router.py  models_router.py  perspectives_router.py  system_router.py
src/twentyseven/config/: logger.py  settings.py
src/twentyseven/lm/: __init__.py  utils.py
