[project]
name = "twenty-seven"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.38.1",
    "fastapi[standard]>=0.115.14",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.3",
    "langgraph>=0.5.0",
    "markitdown[all]>=0.1.2",
    "numpy>=2.3.1",
    "pydantic>=2.11.7",
    "reflex>=0.7.14",
    "ruff>=0.12.1",
    "smolagents[toolkit]>=1.19.0",
    "transformers>=4.53.0",
]
