[project]
name = "twenty-seven"
version = "0.1.0"
description = "The Council of the Twenty-Seven: Philosophical Life Advice App"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "docling>=2.38.1",
    "fastapi[standard]>=0.115.14",
    "flake8>=7.3.0",
    "ipywidgets>=8.1.7",
    "isort>=6.0.1",
    "jupyterlab>=4.4.3",
    "langchain-ollama>=0.3.3",
    "langchain>=0.2.11",
    "langchain-community>=0.2.10",
    "langgraph>=0.5.0",
    "loguru>=0.7.2",
    "markitdown[all]>=0.1.2",
    "numpy>=2.3.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.4.0",
    "reflex>=0.7.14",
    "ruff>=0.12.1",
    "smolagents[toolkit]>=1.19.0",
    "streamlit>=1.46.1",
    "transformers>=4.53.0",
    "types-requests>=2.32.4.20250611",
    "langchain-openai>=0.3.27",
]

[tool.flake8]
max-line-length = 88
